Fix scrollbar from showing

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,4 @@
   text-align: center;
   background-color: aliceblue;
   min-height: 100vh;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
