--- a/src/components/Messages/Welcome/Welcome.module.css
+++ b/src/components/Messages/Welcome/Welcome.module.css
@@ -1,3 +1,5 @@
 h1 {
+    margin-top: 0;
+    padding-top: 1rem;
     margin-bottom: 1rem;
 }
